[gd_scene load_steps=8 format=2]

[ext_resource path="res://objects/sprites/redbutton_depressed.png" type="Texture" id=1]
[ext_resource path="res://objects/RedSwitch.gd" type="Script" id=2]
[ext_resource path="res://objects/sprites/redbutton_pressed.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 2 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 5, 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5, 1 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5, 3 )

[node name="RedSwitch" type="StaticBody2D"]
collision_mask = 0
script = ExtResource( 2 )

[node name="SpriteDepressed" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="SpritePressed" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="CollisionShape2DBase" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 14 )
shape = SubResource( 1 )

[node name="CollisionShape2DButton" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 9 )
shape = SubResource( 5 )

[node name="CollisionShape2DButtonBase" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 11 )
shape = SubResource( 3 )

[node name="ActivationArea" type="Area2D" parent="."]
position = Vector2( 0, 10 )
collision_layer = 0
collision_mask = 514

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActivationArea"]
visible = false
shape = SubResource( 4 )
[connection signal="area_entered" from="ActivationArea" to="." method="_on_ActivationArea_area_entered"]
[connection signal="body_entered" from="ActivationArea" to="." method="_on_ActivationArea_body_entered"]
